feat(workspace): update a workspace
